fixed nav bar hovering issue, prepared folders for articles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body class="bg-amber-50">
-    <header>
+    <header class="group flex flex-col justify-center h-33">
       <a
         class="flex flex-row flex-wrap justify-center align-middle ml-7 mr-7 border-b"
         href="index.html"
@@ -18,13 +18,33 @@
           src="/Images/EoF logo.png"
           alt="Ecko Of The Fox logo"
         />
-        <div class="flex flex-col justify-centeralign-middle mb-3">
+        <div class="flex flex-col justify-center align-middle mb-3">
           <h1 class="eckoofthefox">Ecko Of The Fox</h1>
           <h2 class="eofsubline">for people having given up on the news</h2>
         </div>
       </a>
+      <section
+        style="top: 8.25rem"
+        class="fixed left-1/2 transform -translate-x-1/2 flex flex-row justify-between align-middle gap-10 w-2xl m-auto invisible group-hover:visible border z-10 p-3 shadow-md"
+      >
+        <div class="font-sans font-semibold text-lg">
+          <a href="index.html">Latest news</a>
+        </div>
+        <div class="font-sans font-semibold text-lg">
+          <a href="international.html">International</a>
+        </div>
+        <div class="font-sans font-semibold text-lg">
+          <a href="domestic.html">Domestic</a>
+        </div>
+        <div class="font-sans font-semibold text-lg">
+          <a href="sport.html">Sport</a>
+        </div>
+        <div class="font-sans font-semibold text-lg">
+          <a href="tech.html">Tech</a>
+        </div>
+      </section>
     </header>
-    <section>navbar</section>
+    <section>main-container</section>
     <section>summary</section>
     <section>
       <div>main-article</div>
