--- a/index.html
+++ b/index.html
@@ -7,25 +7,31 @@
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body class="bg-amber-50">
-    <header class="group flex flex-col justify-center h-33">
+  <body>
+    <header class="group flex flex-col justify-center h-33 border-b ml-7 mr-7">
       <a
-        class="flex flex-row flex-wrap justify-center align-middle ml-7 mr-7 border-b"
+        class="flex flex-row flex-wrap justify-center align-middle"
         href="index.html"
       >
-        <img
-          class="h-30"
-          src="/Images/EoF logo.png"
-          alt="Ecko Of The Fox logo"
-        />
-        <div class="flex flex-col justify-center align-middle mb-3">
-          <h1 class="eckoofthefox">Ecko Of The Fox</h1>
-          <h2 class="eofsubline">for people having given up on the news</h2>
+        <div class="flex flex-row justify-center align-middle">
+          <img
+            class="title-logo"
+            src="/Images/EoF logo BW.png"
+            alt="Ecko Of The Fox logo"
+          />
+          <img
+            class="title-logo"
+            src="/Images/EoF title BW.png"
+            alt="The Ecko Of The Fox logo"
+          />
         </div>
       </a>
+      <a href="index.html"
+        ><h2 class="eofsubline">for people having given up on the news</h2></a
+      >
       <section
         style="top: 8.25rem"
-        class="fixed left-1/2 transform -translate-x-1/2 flex flex-row justify-between align-middle gap-10 w-2xl m-auto invisible group-hover:visible border z-10 p-3 shadow-md"
+        class="fixed left-1/2 transform -translate-x-1/2 flex flex-row justify-evenly align-middle gap-10 w-2xl m-auto invisible group-hover:visible border z-10 p-4 shadow-md bg-amber-50"
       >
         <div class="font-sans font-semibold text-lg">
           <a href="index.html">Latest news</a>
@@ -44,13 +50,60 @@
         </div>
       </section>
     </header>
-    <section>main-container</section>
-    <section>summary</section>
-    <section>
-      <div>main-article</div>
-      <div>secondary-articles</div>
-      <div>minor-articles</div>
-    </section>
-    <footer>logo social icons about us nav</footer>
+
+    <footer
+      style="background-color: rgb(62, 62, 62); color: white"
+      class="flex flex-row flex-wrap justify-around items-center"
+    >
+      <div class="flex flex-col items-center w-[5rem]">
+        <img
+          class="title-logo"
+          src="/Images/EoF logo BW inverted.png"
+          alt="The Ecko Of The Fox logo"
+        />
+        <img
+          style="max-width: 5rem; margin-top: 0.5rem"
+          src="/Images/social-media-icons.png"
+          alt="social media icons"
+        />
+      </div>
+      <div>
+        <h2>About us</h2>
+        <ul>
+          <li>History</li>
+          <li>Policies</li>
+          <li>Meet the team</li>
+          <li>Career</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Frequent Questions</h2>
+        <ul>
+          <li>What are your sources?</li>
+          <li>Are you guys for real?</li>
+          <li>
+            <a
+              href="https://en.wikipedia.org/wiki/Phrases_from_The_Hitchhiker%27s_Guide_to_the_Galaxy#The_Answer_to_the_Ultimate_Question_of_Life,_the_Universe,_and_Everything_is_42"
+              >What's the meaning of life?</a
+            >
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/iSqL2qFCPWVjcCc79"
+              >¿Donde está la biblioteca?</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h2>Navigation</h2>
+        <ul>
+          <li><a href="index.html">Latest news</a></li>
+          <li><a href="international.html">International</a></li>
+          <li><a href="domestic.html">Domestic</a></li>
+          <li><a href="sport.html">Sport</a></li>
+          <li><a href="tech.html">Tech</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
