--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styleoutput.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body class="bg-amber-50" style="font-family: Noticia; font-size: 1.25rem;">
+  <body class="bg-amber-50" style="font-family: Noticia; font-size: 1.25rem">
     <header class="group flex flex-col justify-center h-33 border-b mx-7">
       <a
         class="flex flex-row flex-wrap justify-center align-middle"
@@ -29,7 +29,7 @@
       <a href="index.html"
         ><h2 class="eofsubline">for people having given up on the news</h2></a
       >
-      <section
+      <nav
         class="fixed left-1/2 transform -translate-x-1/2 flex flex-row justify-evenly align-middle gap-10 w-2xl m-auto invisible group-hover:visible border z-10 p-4 top-33 bg-amber-50"
       >
         <div class="font-sans font-semibold text-lg">
@@ -48,116 +48,159 @@
           <a href="tech.html">Tech</a>
         </div>
         <div class="font-sans font-semibold text-lg">
-          <a href="tech.html">Entertainment</a>
+          <a href="entertainment.html">Entertainment</a>
         </div>
-      </section>
+      </nav>
     </header>
     <!-- MAIN CONTAINER------------------------------------------------------------------------------------------->
     <section class="flex flex-row flex-wrap mx-10">
       <!-- sidebar ---------------------->
-      <div class="bg-blue-400 basis-1/6 px-1 border-r my-0.5 flex flex-col gap-1">
+      <div class="basis-1/6 px-1 border-r my-0.5 flex flex-col gap-1">
         <i>date</i>
         <h2 class="self-center">title</h2>
         <div class="flex flex-col justify-baseline">
           <p>article</p>
-          <div class="flex flex-row flex-wrap content-center gap-3 self-end h-16">
+          <div
+            class="flex flex-row flex-wrap content-center gap-3 self-end h-16"
+          >
             <i class="author">author</i>
-            <img class="max-h-5 md:max-h-16" src="/Images/fox_sig.png" alt="">
+            <img class="max-h-5 md:max-h-16" src="/Images/fox_sig.png" alt="" />
           </div>
-      </div>
+        </div>
       </div>
       <!-- MAIN CONTENT ------------------------------------------------------------------------------------------>
-      <div class="bg-amber-800 basis-5/6 flex flex-col">
+      <div class="basis-5/6 flex flex-col">
         <!-- main article---------------------->
-        <div class="bg-red-400 px-1 flex flex-col border-b m-1">
-            <div class="flex flex-row justify-center items-center basis-1/3">
-              <i class="basis-1/12">date</i>
-              <h2 class="basis-11/12 text-center underline">title</h2>
-            </div>
-            <div class="columns-3 gap-8s text-justify">
-              <p class="bg-amber-100">
-                <img class="max-w-60 max-h-30 p-1 float-left " src="/Images/EoF logo.png" alt="">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum dolore quas quod beatae nam fugit, assumenda ea ipsa modi porro, ut fugiat repellat mollitia alias exercitationem nobis ab ducimus.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, sapiente rerum similique est aperiam voluptates rem eius, dolorem fugit quam facere itaque quia veritatis maiores minima placeat labore totam. Provident!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae maxime laborum mollitia cumque animi aut quibusdam hic, doloribus dolore fugiat commodi exercitationem est facilis ex veniam dolores at non! Officia.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae iure blanditiis nisi ipsa magnam autem nihil voluptates sint ipsum aspernatur dolorem reiciendis modi quidem et delectus, dicta provident ea explicabo.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem totam enim atque, ea, vel dicta ipsa esse, labore quo necessitatibus corporis doloribus dolor sapiente exercitationem mollitia? Quos reiciendis rerum eum?
+        <div class="px-1 flex flex-col border-b m-1">
+          <div class="flex flex-row justify-center items-center basis-1/3">
+            <i class="basis-1/12">date</i>
+            <a class="basis-11/12 text-center underline" href="#"
+              ><h2>title</h2></a
+            >
+          </div>
+          <div class="columns-3 gap-8">
+            <p>
+              <img
+                class="max-w-[50%] max-h-[50%] p-1 float-left"
+                src="/Images/EoF logo.png"
+                alt=""
+              />
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque dolorum dolore quas quod beatae nam fugit, assumenda ea
+              ipsa modi porro, ut fugiat repellat mollitia alias exercitationem
+              nobis ab ducimus. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Ullam, sapiente rerum similique est aperiam
+              voluptates rem eius, dolorem fugit quam facere itaque quia
+              veritatis maiores minima placeat labore totam. Provident! Lorem
+              ipsum dolor sit amet consectetur, adipisicing elit. Quae maxime
+              laborum mollitia cumque animi aut quibusdam hic, doloribus dolore
+              fugiat commodi exercitationem est facilis ex veniam dolores at
+              non! Officia. Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Vitae iure blanditiis nisi ipsa magnam autem nihil
+              voluptates sint ipsum aspernatur dolorem reiciendis modi quidem et
+              delectus, dicta provident ea explicabo. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Autem totam enim atque, ea, vel
+              dicta ipsa esse, labore quo necessitatibus corporis doloribus
+              dolor sapiente exercitationem mollitia? Quos reiciendis rerum eum?
             </p>
-            <i class="author w-full flex justify-end">author</i>
+            <i class="author">author</i>
           </div>
         </div>
         <!-- BOTTOM ARTICLES-------------------------------------------------------------------------------------->
         <div class="flex flex-row flex-wrap">
           <!-- SECONDARY ARTICLES--------------------------------------------------------------------------------->
-          <div class="bg-violet-500 flex flex-row flex-wrap basis-3/4 border-r mt-1">
+          <div class="flex flex-row flex-wrap basis-3/4 border-r mt-1">
             <!-- secondary article ------------------------->
             <div class="basis-1/3 px-1">
               <i>date</i>
-              <img src="/Images/EoF logo.png" alt="">
-              <h2>title</h2>
+              <img
+                class="max-w-[75%] mx-auto"
+                src="/Images/EoF logo.png"
+                alt=""
+              />
+              <a href="#"><h2>title</h2></a>
               <p class="text-justify">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, modi cumque atque a ab repellendus natus laboriosam. Suscipit dolorum earum quam ipsa deleniti cum praesentium ab nihil, quas quibusdam dolores?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint,
+                modi cumque atque a ab repellendus natus laboriosam. Suscipit
+                dolorum earum quam ipsa deleniti cum praesentium ab nihil, quas
+                quibusdam dolores?
               </p>
               <i class="author">author</i>
             </div>
             <!-- secondary article ------------------------->
             <div class="basis-1/3 px-1">
               <i>date</i>
-              <img src="/Images/EoF logo.png" alt="">
-              <h2>title</h2>
+              <img
+                class="max-w-[75%] mx-auto"
+                src="/Images/EoF logo.png"
+                alt=""
+              />
+              <a href="#"><h2>title</h2></a>
               <p class="text-justify">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed aspernatur ipsam quo! Odio, deleniti perferendis magnam ratione dicta fugit quas reprehenderit quos eius eveniet dolore quidem numquam eaque quisquam repudiandae!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed
+                aspernatur ipsam quo! Odio, deleniti perferendis magnam ratione
+                dicta fugit quas reprehenderit quos eius eveniet dolore quidem
+                numquam eaque quisquam repudiandae!
               </p>
-              <i class="author">author</i>              
+              <i class="author">author</i>
             </div>
             <!-- secondary article ------------------------->
             <div class="basis-1/3 px-1">
               <i>date</i>
-              <img src="/Images/EoF logo.png" alt="">
-              <h2>title</h2>
+              <img
+                class="max-w-[75%] mx-auto"
+                src="/Images/EoF logo.png"
+                alt=""
+              />
+              <a href="#"><h2>title</h2></a>
               <p class="text-justify">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eaque placeat ducimus ad earum dolor unde, numquam labore veniam hic! Doloremque libero beatae adipisci nostrum? Voluptates sapiente consequatur quasi explicabo.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                eaque placeat ducimus ad earum dolor unde, numquam labore veniam
+                hic! Doloremque libero beatae adipisci nostrum? Voluptates
+                sapiente consequatur quasi explicabo.
               </p>
-              <i class="author">author</i>              
+              <i class="author">author</i>
             </div>
           </div>
           <!-- MINOR ARTICLES------------------------------------------------------------------------------------->
-          <div class="bg-yellow-400 basis-1/4 flex flex-col gap-0.5 overflow-x-hidden h-full px-1 mt-1">
+          <div
+            class="basis-1/4 flex flex-col gap-0.5 overflow-x-hidden h-full px-1 mt-1"
+          >
             <!-- minor article------------------------------>
             <div class="minor-article flex-grow">
               <h2>title</h2>
               <div>
-                TEST TEXT HIDDEN
+                <a href="#">TEST TEXT HIDDEN</a>
               </div>
             </div>
             <!-- minor article------------------------------>
             <div class="minor-article flex-grow">
               <h2>title</h2>
               <div>
-                TEST TEXT HIDDEN
+                <a href="#">TEST TEXT HIDDEN</a>
               </div>
             </div>
             <!-- minor article------------------------------>
             <div class="minor-article flex-grow">
               <h2>title</h2>
               <div>
-                TEST TEXT HIDDEN
+                <a href="#">TEST TEXT HIDDEN</a>
               </div>
             </div>
             <!-- minor article------------------------------>
             <div class="minor-article flex-grow">
               <h2>title</h2>
               <div>
-                TEST TEXT HIDDEN
+                <a href="#">TEST TEXT HIDDEN</a>
               </div>
             </div>
             <!-- minor article------------------------------>
             <div class="minor-article flex-grow">
               <h2>title</h2>
               <div>
-                TEST TEXT HIDDEN
+                <a href="#">TEST TEXT HIDDEN</a>
               </div>
-            </div>                                    
+            </div>
           </div>
         </div>
       </div>
@@ -165,44 +208,56 @@
 
     <!-- FOOTER--------------------------------------------------------------------------------------------------->
     <footer
-      style="background-color: rgb(62, 62, 62);"
-      class="flex flex-row flex-wrap justify-around items-center text-amber-50 mt-1"
+      style="background-color: rgb(62, 62, 62)"
+      class="flex flex-row flex-wrap justify-between items-top text-amber-50 mt-1"
     >
-      <div class="flex flex-col basis-1/4 items-center gap-3 w-40 h-full">
+      <div
+        class="flex flex-col basis-1/5 justify-center items-center gap-3 w-40 h-full self-center"
+      >
         <a href="index.html">
-        <img
-          class="title-logo"
-          src="/Images/EoF logo BW inverted.png"
-          alt="The Ecko Of The Fox logo"
-        />
-      </a>
-        <a href="https://www.lifehack.org/articles/technology/you-should-aware-these-10-effects-social-media-you.html">
-        <img
-          class="max-h-6 hover:max-h-[1.45rem]"
-          src="/Images/social-media-icons.png"
-          alt="social media icons"
-        />
-      </a>
+          <img
+            class="title-logo"
+            src="/Images/EoF logo BW inverted.png"
+            alt="The Ecko Of The Fox logo"
+          />
+        </a>
+        <a
+          href="https://www.lifehack.org/articles/technology/you-should-aware-these-10-effects-social-media-you.html"
+        >
+          <img
+            class="max-h-6 hover:max-h-[1.45rem]"
+            src="/Images/social-media-icons.png"
+            alt="social media icons"
+          />
+          <i class="mx-auto">©2025 eckofox</i>
+        </a>
       </div>
-      <div>
+      <div class="basis-1/5">
         <h2>About us</h2>
         <ul>
-          <li class="hover:font-semibold">History</li>
-          <li class="hover:font-semibold">Policies</li>
-          <li class="hover:font-semibold">Meet the team</li>
-          <li class="hover:font-semibold">Career</li>
-          <li class="hover:font-semibold"><a href="mailto:"@eckofox1981@pm.me">Contact us</a></li>
+          <li class="hover:font-semibold"><a href="#">History</a></li>
+          <li class="hover:font-semibold"><a href="#">Policies</a></li>
+          <li class="hover:font-semibold"><a href="#">Meet the team</a></li>
+          <li class="hover:font-semibold"><a href="#">Career</a></li>
+          <li class="hover:font-semibold">
+            <a href="mailto:eckofox1981@pm.me">Contact us</a>
+          </li>
         </ul>
       </div>
-      <div>
+      <div class="basis-1/5">
         <h2>Frequent Questions</h2>
         <ul>
-          <li class="hover:font-semibold">What are your sources?</li>
-          <li class="hover:font-semibold">Are you guys for real?</li>
+          <li class="hover:font-semibold">
+            <a href="#">What are your sources?</a>
+          </li>
+          <li class="hover:font-semibold">
+            <a href="#">Are you guys for real?</a>
+          </li>
           <li class="hover:font-semibold">
             <a
               href="https://en.wikipedia.org/wiki/Phrases_from_The_Hitchhiker%27s_Guide_to_the_Galaxy#The_Answer_to_the_Ultimate_Question_of_Life,_the_Universe,_and_Everything_is_42"
               >What's the meaning of life?</a
+            >
             >
           </li>
           <li class="hover:font-semibold">
@@ -212,14 +267,23 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="basis-1/5">
         <h2>Navigation</h2>
         <ul>
-          <li class="hover:font-semibold"><a href="index.html">Latest news</a></li>
-          <li class="hover:font-semibold"><a href="international.html">International</a></li>
-          <li class="hover:font-semibold"><a href="domestic.html">Domestic</a></li>
+          <li class="hover:font-semibold">
+            <a href="index.html">Latest news</a>
+          </li>
+          <li class="hover:font-semibold">
+            <a href="international.html">International</a>
+          </li>
+          <li class="hover:font-semibold">
+            <a href="domestic.html">Domestic</a>
+          </li>
           <li class="hover:font-semibold"><a href="sport.html">Sport</a></li>
           <li class="hover:font-semibold"><a href="tech.html">Tech</a></li>
+          <li class="hover:font-semibold">
+            <a href="entertainment.html">Entertainment</a>
+          </li>
         </ul>
       </div>
     </footer>
