added chronicle secttion

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- MAIN CONTAINER------------------------------------------------------------------------------------------->
     <section class="flex flex-row flex-wrap mx-10">
       <!-- sidebar ---------------------->
-      <div class="basis-1/6 px-1 border-r my-1 flex flex-col gap-1">
+      <sidebar class="basis-1/6 px-1 border-r my-1 flex flex-col gap-1">
         <i>date</i>
         <h2 class="self-center">title</h2>
         <div class="flex flex-col justify-baseline">
@@ -151,7 +151,7 @@
             <img class="max-h-5 md:max-h-16" src="/Images/fox_sig.png" alt="" />
           </div>
         </div>
-      </div>
+      </sidebar>
       <!-- MAIN CONTENT ------------------------------------------------------------------------------------------>
       <div class="basis-5/6 flex flex-col">
         <!-- main article---------------------->
@@ -287,6 +287,199 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- SECONDARY CONTAINER ------------------------------------------------------------>
+    <section class="mx-10 border-t">
+      <h1 class="text-center mt-1">Guest Chronicles</h1>
+      <!-- CHRONICLES ----------------------------------------------------------------->
+      <div
+        class="flex flex-row flex-wrap gap-1.5 justify-center content-center align-middle pb-5 mb-2"
+      >
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
+        <!-- chronicle container------------------------------>
+        <a
+          href="#"
+          class="chronicle-container flex flex-row content-center justify-around basis-1/5 p-2 border"
+        >
+          <!-- number -->
+          <div
+            style="font-family: Mr Dafoe"
+            class="min-h-16 min-w-16 max-h-16 border rounded-full self-center content-center text-center text-5xl"
+          >
+            1
+          </div>
+          <!-- title and text container-->
+          <div
+            class="flex flex-col w-auto align-text-top text-[1rem] leading-5"
+          >
+            <h3 class="text-center">TITLE</h3>
+            <p>
+              and as we wind on down the road, our shaddows taller than our
+              souls
+            </p>
+          </div>
+        </a>
       </div>
     </section>
 
