header for mobile 344 + hamburger

--- a/index.html
+++ b/index.html
@@ -10,5 +10,45 @@
   <body
     class="bg-amber-50"
     style="font-family: Noticia; font-size: 1.25rem; color: rgb(39, 39, 39)"
-  ></body>
+  >
+    <header class="max-h-24 max-w-fit py-0.5 flex justify-between bg-amber-400">
+      <div
+        class="max-h-24 max-w-[85%] self-center flex flex-col justify-center mx-auto"
+      >
+        <img
+          class="hidden sm:block"
+          src="/Images/EoF logo BW.png"
+          alt="ecko of the fox logo"
+        />
+        <img src="/Images/EoF title BW.png" alt="ecko of the fox title" />
+      </div>
+      <div id="hamburger-menu">
+        <svg
+          width="2rem"
+          height="2rem"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z"
+            fill="rgb(62,62,62)"
+          />
+        </svg>
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/index.html">International</a></li>
+          <li><a href="/index.html">Domestic</a></li>
+          <li><a href="/index.html">Economy</a></li>
+          <li><a href="/index.html">Technology</a></li>
+          <li><a href="/index.html">Entertainment</a></li>
+        </ul>
+      </div>
+    </header>
+    <section>
+      <div class="h-[500px] bg-amber-900"></div>
+    </section>
+  </body>
 </html>
