--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body
-    class="bg-amber-50"
+    class="bg-amber-50 text-justify"
     style="font-family: Noticia; font-size: 1.25rem; color: rgb(39, 39, 39)"
   >
-    <header class="max-h-24 max-w-fit py-0.5 flex justify-between bg-amber-400">
+    <header
+      class="h-16 max-w-fit py-0.5 flex justify-between content-center border-b fixed top-0 z-50 bg-amber-50"
+    >
       <div
-        class="max-h-24 max-w-[85%] self-center flex flex-col justify-center mx-auto"
+        class="max-h-16 max-w-[85%] self-center flex flex-row justify-center content-center mx-auto"
       >
         <img
           class="hidden sm:block"
@@ -47,8 +49,250 @@
         </ul>
       </div>
     </header>
-    <section>
-      <div class="h-[500px] bg-amber-900"></div>
+    <!-- MAIN CONTENT---------------------------------------------------------------------------- -->
+    <section class="flex flex-col px-2 pt-16 border-b mx-0.5">
+      <!-- edito-------------------------------------------------- -->
+      <div class="bg-blue-700 flex flex-col items-center my-0.5 border-b">
+        <h1 class="text-2xl underline my-0">Editorial</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint
+          possimus ad earum! Eum rem perspiciatis quasi provident non tempore
+          similique aut fuga saepe aperiam! Modi velit deleniti ea facilis
+          harum! <br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+          eum ut quibusdam accusamus officia eveniet at consequatur, inventore
+          vero! Quibusdam sit rerum quidem dicta amet praesentium? Mollitia
+          fugit hic eveniet?
+        </p>
+        <i class="author">Frank the Fox</i>
+      </div>
+      <!-- main article------------------------------------------- -->
+      <div class="bg-red-700 flex flex-col items-center content-center my-0.5">
+        <h2><a href="#">ALIENS ARE ATTACKING!</a></h2>
+        <img class="max-h-36" src="/Images/EoF logo.png" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+          veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab sunt,
+          ipsa natus eligendi quis sequi perferendis, rerum nesciunt harum eius
+          veniam nobis.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
+          Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
+          provident tenetur nam?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          ipsam sequi quisquam unde consequatur nam adipisci iusto tempora.
+          Praesentium, nam corrupti! Unde, iure sequi architecto nihil est
+          provident tenetur nam?
+        </p>
+        <i class="author">author</i>
+      </div>
+      <!-- SECONDARY ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+      <div>
+        <!-- secondary article-------------------------------------- -->
+        <div
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+        >
+          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <p>
+            <img
+              class="max-w-[40%] max-h-24 float-left"
+              src="/Images/EoF logo.png"
+              alt=""
+            />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
+            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
+            harum eius veniam nobis.
+          </p>
+          <i class="author">author</i>
+        </div>
+        <!-- secondary article-------------------------------------- -->
+        <div
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+        >
+          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <p>
+            <img
+              class="max-w-[40%] max-h-24 float-left"
+              src="/Images/EoF logo.png"
+              alt=""
+            />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
+            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
+            harum eius veniam nobis.
+          </p>
+          <i class="author">author</i>
+        </div>
+        <!-- secondary article-------------------------------------- -->
+        <div
+          class="bg-blue-700 flex flex-col items-center content-center my-0.5"
+        >
+          <h2><a href="#">Freddy cloned, Queen to reunite</a></h2>
+          <p>
+            <img
+              class="max-w-[40%] max-h-24 float-left"
+              src="/Images/EoF logo.png"
+              alt=""
+            />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            veritatis placeat quibusdam! Suscipit illum voluptas ducimus ab
+            sunt, ipsa natus eligendi quis sequi perferendis, rerum nesciunt
+            harum eius veniam nobis.
+          </p>
+          <i class="author">author</i>
+        </div>
+        <!-- SLIDING   ARTICLES+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <div
+          class="bg-yellow-300 overflow-hidden flex flex-col gap-4 justify-around my-2"
+        >
+          <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
+          <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
+          <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
+          <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
+          <!-- sliding   article-------------------------------------- -->
+          <a class="sliding-article" href="#">
+            <h3>Bob tells the story of his alien abduction</h3>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          </a>
+        </div>
+      </div>
     </section>
+    <!-- SECONDARY CONTENT----------------------------------------------------------------------- -->
+    <section
+      class="flex flex-col items-center px-2 border-b mx-0.5 text-justify"
+    >
+      <!-- OPINIONS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+      <h1>Opinions</h1>
+      <div>
+        <!-- first four (always visible)++++++++++++++++++++++++++++ -->
+        <div class="flex flex-wrap justify-center gap-4 sm:gap-2">
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                1
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                It's been said before...
+              </h3>
+            </a>
+            <p class="text-sm">
+              But I am old, so I'll say it again: the Earth is flatter than an
+              ironing board, I am not crazy...
+            </p>
+            <i class="author">Grumpy Dwarf</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                2
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                I like to move it, move it...
+              </h3>
+            </a>
+            <p class="text-sm">
+              I like to move it, move it. I like to move it, move it. I like to
+              move it!
+            </p>
+            <i class="author">Secret Dentist</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                3
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">
+                What time is it?
+              </h3>
+            </a>
+            <p class="text-sm">
+              Seriously I lost my watch. I was a golden Breitling worth 10.000$.
+              I think my boyfriend stole it...
+            </p>
+            <i class="author">I forgot</i>
+          </div>
+          <!-- opinion------------------------------------------------ -->
+          <div
+            class="group flex flex-col border hover:border-2 w-full sm:w-2/5"
+          >
+            <a class="flex flex-row gap-2" href="#">
+              <h1
+                class="h-16 w-16 flex rounded-full border justify-center items-center group-hover:bg-[rgba(62,62,62,0.5)]"
+              >
+                4
+              </h1>
+              <h3 class="text-wrap font-[1.25rem] text-left">Heziekel 25:17</h3>
+            </a>
+            <p class="text-sm">
+              And you will know, my name is the lord when I lay my vengeance
+              upon you
+            </p>
+            <i class="author">Friend of Vincent</i>
+          </div>
+        </div>
+        <!-- next four (hidden for mobiles)+++++++++++++++++++++++++ -->
+      </div>
+      <div class="h-50 bg-red-900">1</div>
+    </section>
+    <footer
+      class="bg-[rgb(62,62,62)] w-full py-4 flex justify-around content-center"
+    >
+      <a class="max-w-20 self-center" href="#"
+        ><img
+          src="Images/EoF logo BW inverted.png"
+          alt="ecko of the fox logo"
+        />
+        <i class="text-center text-amber-50 font-stretch-50%">© eckofox</i>
+      </a>
+      <div
+        class="text-amber-50 self-center sm:flex flex-wrap sm:justify-between gap-4"
+      >
+        <a href="#">
+          <h4>About us</h4>
+        </a>
+        <a href="#">
+          <h4>Policies</h4>
+        </a>
+        <a href="#">
+          <h4>Legal</h4>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
